@@ -39,6 +39,15 @@
 ;
 ;final=1
 
+; Number of hidden clues in this cgrp.
+; Hidden clues behaves exactly same as normal clues during evaluation of key
+; and scheduling hints/solutions. But it is never displayed.
+; Hidden clues could be usefull when the form of clue is material/physical
+; so it cannot be present in the web interface. If such clue point to several
+; solutions you may want to add the 'hidden clues' and make them point to the
+; other(s) solution(s).  
+;
+;hidden_clues=0
 
 [clue]
 ; For each clue, specify ID of solution it points to. Clues are indexed by integers
