@@ -139,6 +139,7 @@ class Iquest_Clue extends Iquest_file{
 
     const TYPE_REGULAR = "regular";
     const TYPE_COIN    = "coin";
+    const TYPE_HIDDEN  = "hidden";
 
     /**
      *  Fetch clues form DB
